clusters/dagda/apps/homepage/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage
  namespace: homepage
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
  hostnames:
    - homepage.aiectomy.xyz
  rules:
    - backendRefs:
        - name: homepage
          port: 3000
